; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/mellanox/mlx5/core/fpga/extr_ipsec.c_rule_search.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/mellanox/mlx5/core/fpga/extr_ipsec.c_rule_search.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mlx5_fpga_ipsec_rule = type { i32 }
%struct.mlx5_fpga_ipsec = type { i32, i32 }
%struct.fs_fte = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.mlx5_fpga_ipsec_rule* (%struct.mlx5_fpga_ipsec*, %struct.fs_fte*)* @rule_search to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.mlx5_fpga_ipsec_rule* @rule_search(%struct.mlx5_fpga_ipsec* %0, %struct.fs_fte* %1) #0 {
  %3 = alloca %struct.mlx5_fpga_ipsec*, align 8
  %4 = alloca %struct.fs_fte*, align 8
  %5 = alloca %struct.mlx5_fpga_ipsec_rule*, align 8
  store %struct.mlx5_fpga_ipsec* %0, %struct.mlx5_fpga_ipsec** %3, align 8
  store %struct.fs_fte* %1, %struct.fs_fte** %4, align 8
  %6 = load %struct.mlx5_fpga_ipsec*, %struct.mlx5_fpga_ipsec** %3, align 8
  %7 = getelementptr inbounds %struct.mlx5_fpga_ipsec, %struct.mlx5_fpga_ipsec* %6, i32 0, i32 0
  %8 = call i32 @mutex_lock(i32* %7)
  %9 = load %struct.mlx5_fpga_ipsec*, %struct.mlx5_fpga_ipsec** %3, align 8
  %10 = getelementptr inbounds %struct.mlx5_fpga_ipsec, %struct.mlx5_fpga_ipsec* %9, i32 0, i32 1
  %11 = load %struct.fs_fte*, %struct.fs_fte** %4, align 8
  %12 = call %struct.mlx5_fpga_ipsec_rule* @_rule_search(i32* %10, %struct.fs_fte* %11)
  store %struct.mlx5_fpga_ipsec_rule* %12, %struct.mlx5_fpga_ipsec_rule** %5, align 8
  %13 = load %struct.mlx5_fpga_ipsec*, %struct.mlx5_fpga_ipsec** %3, align 8
  %14 = getelementptr inbounds %struct.mlx5_fpga_ipsec, %struct.mlx5_fpga_ipsec* %13, i32 0, i32 0
  %15 = call i32 @mutex_unlock(i32* %14)
  %16 = load %struct.mlx5_fpga_ipsec_rule*, %struct.mlx5_fpga_ipsec_rule** %5, align 8
  ret %struct.mlx5_fpga_ipsec_rule* %16
}

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local %struct.mlx5_fpga_ipsec_rule* @_rule_search(i32*, %struct.fs_fte*) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
